--- a/QClient/throwpkm.ui
+++ b/QClient/throwpkm.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>752</width>
-    <height>607</height>
+    <height>708</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QPushButton" name="pushButton_3">
    <property name="geometry">
     <rect>
-     <x>550</x>
-     <y>550</y>
+     <x>560</x>
+     <y>650</y>
      <width>75</width>
      <height>23</height>
     </rect>
@@ -33,191 +33,11 @@ QPushButton:pressed{border-color:gray}</string>
     <string>Select this</string>
    </property>
   </widget>
-  <widget class="QTableWidget" name="tableWidget">
-   <property name="geometry">
-    <rect>
-     <x>90</x>
-     <y>40</y>
-     <width>151</width>
-     <height>481</height>
-    </rect>
-   </property>
-   <row>
-    <property name="text">
-     <string>Name</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>Id</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>Nicky</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>Grade</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>Exp</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>Hp</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>Atk</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>Sat</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>Def</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>Sdf</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>Spe</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>Skills</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>Skill1</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>Skill2</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>Skill4</string>
-    </property>
-   </row>
-   <column>
-    <property name="text">
-     <string>Data</string>
-    </property>
-   </column>
-  </widget>
-  <widget class="QTableWidget" name="tableWidget_3">
-   <property name="geometry">
-    <rect>
-     <x>510</x>
-     <y>40</y>
-     <width>151</width>
-     <height>481</height>
-    </rect>
-   </property>
-   <row>
-    <property name="text">
-     <string>Name</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>Id</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>Nicky</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>Grade</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>Exp</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>Hp</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>Atk</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>Sat</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>Def</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>Sdf</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>Spe</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>Skills</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>Skill1</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>Skill2</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>Skill4</string>
-    </property>
-   </row>
-   <column>
-    <property name="text">
-     <string>Data</string>
-    </property>
-   </column>
-  </widget>
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
      <x>130</x>
-     <y>550</y>
+     <y>650</y>
      <width>81</width>
      <height>21</height>
     </rect>
@@ -233,14 +53,40 @@ QPushButton:pressed{border-color:gray}</string>
     <string>Select this</string>
    </property>
   </widget>
-  <widget class="QTableWidget" name="tableWidget_2">
+  <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>300</x>
-     <y>40</y>
-     <width>151</width>
-     <height>481</height>
+     <x>350</x>
+     <y>650</y>
+     <width>75</width>
+     <height>23</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton{border: 2px solid grey;
+	background:rgb(131, 197, 197);
+	border-radius: 8px;}
+QPushButton:hover{border-color:rgb(183,203,188);}
+QPushButton:pressed{border-color:gray}</string>
+   </property>
+   <property name="text">
+    <string>Select this</string>
+   </property>
+  </widget>
+  <widget class="QTableWidget" name="UserPm_1">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>50</y>
+     <width>161</width>
+     <height>571</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(255, 255, 255);</string>
+   </property>
+   <property name="editTriggers">
+    <set>QAbstractItemView::NoEditTriggers</set>
    </property>
    <row>
     <property name="text">
@@ -249,7 +95,7 @@ QPushButton:pressed{border-color:gray}</string>
    </row>
    <row>
     <property name="text">
-     <string>Id</string>
+     <string>ID</string>
     </property>
    </row>
    <row>
@@ -265,6 +111,16 @@ QPushButton:pressed{border-color:gray}</string>
    <row>
     <property name="text">
      <string>Exp</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>Nature</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>Property</string>
     </property>
    </row>
    <row>
@@ -299,7 +155,7 @@ QPushButton:pressed{border-color:gray}</string>
    </row>
    <row>
     <property name="text">
-     <string>Skills</string>
+     <string>SkillNum</string>
     </property>
    </row>
    <row>
@@ -314,33 +170,330 @@ QPushButton:pressed{border-color:gray}</string>
    </row>
    <row>
     <property name="text">
+     <string>Skill3</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
      <string>Skill4</string>
     </property>
    </row>
    <column>
     <property name="text">
-     <string>Data</string>
+     <string/>
+    </property>
+    <property name="foreground">
+     <brush brushstyle="NoBrush">
+      <color alpha="255">
+       <red>0</red>
+       <green>0</green>
+       <blue>0</blue>
+      </color>
+     </brush>
     </property>
    </column>
   </widget>
-  <widget class="QPushButton" name="pushButton_2">
+  <widget class="QTableWidget" name="UserPm_2">
    <property name="geometry">
     <rect>
-     <x>340</x>
-     <y>550</y>
-     <width>75</width>
-     <height>23</height>
+     <x>510</x>
+     <y>50</y>
+     <width>161</width>
+     <height>571</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">QPushButton{border: 2px solid grey;
-	background:rgb(131, 197, 197);
-	border-radius: 8px;}
-QPushButton:hover{border-color:rgb(183,203,188);}
-QPushButton:pressed{border-color:gray}</string>
+    <string notr="true">background-color: rgb(255, 255, 255);</string>
+   </property>
+   <property name="editTriggers">
+    <set>QAbstractItemView::NoEditTriggers</set>
+   </property>
+   <row>
+    <property name="text">
+     <string>Name</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>ID</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>Nicky</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>Grade</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>Exp</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>Nature</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>Property</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>Hp</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>Atk</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>Sat</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>Def</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>Sdf</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>Spe</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>SkillNum</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>Skill1</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>Skill2</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>Skill3</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>Skill4</string>
+    </property>
+   </row>
+   <column>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="foreground">
+     <brush brushstyle="NoBrush">
+      <color alpha="255">
+       <red>0</red>
+       <green>0</green>
+       <blue>0</blue>
+      </color>
+     </brush>
+    </property>
+   </column>
+  </widget>
+  <widget class="QTableWidget" name="UserPm_3">
+   <property name="geometry">
+    <rect>
+     <x>300</x>
+     <y>50</y>
+     <width>161</width>
+     <height>571</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(255, 255, 255);</string>
+   </property>
+   <property name="editTriggers">
+    <set>QAbstractItemView::NoEditTriggers</set>
+   </property>
+   <row>
+    <property name="text">
+     <string>Name</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>ID</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>Nicky</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>Grade</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>Exp</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>Nature</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>Property</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>Hp</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>Atk</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>Sat</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>Def</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>Sdf</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>Spe</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>SkillNum</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>Skill1</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>Skill2</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>Skill3</string>
+    </property>
+   </row>
+   <row>
+    <property name="text">
+     <string>Skill4</string>
+    </property>
+   </row>
+   <column>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="foreground">
+     <brush brushstyle="NoBrush">
+      <color alpha="255">
+       <red>0</red>
+       <green>0</green>
+       <blue>0</blue>
+      </color>
+     </brush>
+    </property>
+   </column>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>560</x>
+     <y>20</y>
+     <width>61</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(0, 0, 127);
+	border: 2px solid green;
+    border-radius: 4px;</string>
    </property>
    <property name="text">
-    <string>Select this</string>
+    <string>Pokemon</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>350</x>
+     <y>20</y>
+     <width>61</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(0, 0, 127);
+	border: 2px solid green;
+    border-radius: 4px;</string>
+   </property>
+   <property name="text">
+    <string>Pokemon</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_6">
+   <property name="geometry">
+    <rect>
+     <x>140</x>
+     <y>20</y>
+     <width>61</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(0, 0, 127);
+	border: 2px solid green;
+    border-radius: 4px;</string>
+   </property>
+   <property name="text">
+    <string>Pokemon</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
    </property>
   </widget>
  </widget>
